[gd_scene load_steps=6 format=3 uid="uid://daqyibj3ecyfm"]

[ext_resource type="PackedScene" uid="uid://cknj1un5e8edr" path="res://examples/rpg/scenes/capital_city/capital_city.tscn" id="1_c36lu"]
[ext_resource type="Script" uid="uid://dtylicw0ujkj" path="res://examples/rpg/scenes/world/world.gd" id="1_cu7we"]
[ext_resource type="PackedScene" uid="uid://kalpbokvadin" path="res://examples/rpg/scenes/black_market/black_market.tscn" id="2_piitl"]
[ext_resource type="PackedScene" uid="uid://dcybgqq2sewof" path="res://examples/rpg/actors/player/player.tscn" id="3_cu7we"]
[ext_resource type="Script" uid="uid://1dcdc4204jy" path="res://examples/rpg/scripts/hud.gd" id="4_piitl"]

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_cu7we")

[node name="CapitalCity" parent="." instance=ExtResource("1_c36lu")]

[node name="BlackMarket" parent="." instance=ExtResource("2_piitl")]
position = Vector2(-528, 0)

[node name="Player" parent="." instance=ExtResource("3_cu7we")]
position = Vector2(409, 147)

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4_piitl")

[node name="Label" type="Label" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -23.0
offset_right = 136.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Press 'ENTER' to Interact with NPCs"
horizontal_alignment = 1

[node name="UINotificationLocator" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 8.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="SaveGame" type="Button" parent="HUD/VBoxContainer"]
layout_mode = 2
text = "SAVE GAME"

[node name="LoadGame" type="Button" parent="HUD/VBoxContainer"]
layout_mode = 2
disabled = true
text = "LOAD GAME"

[node name="DeleteSave" type="Button" parent="HUD/VBoxContainer"]
layout_mode = 2
disabled = true
text = "DELETE SAVE"

[connection signal="location_reached" from="CapitalCity" to="HUD" method="_on_location_reached"]
[connection signal="location_reached" from="BlackMarket" to="HUD" method="_on_location_reached"]
[connection signal="pressed" from="HUD/VBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="HUD/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="HUD/VBoxContainer/DeleteSave" to="." method="_on_delete_save_pressed"]
